--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,10 @@
 
 // Blocks
 @import "./blocks/logo";
+@import "./blocks/icon-row";
+@import "./blocks/slider";
+@import "./blocks/title";
+@import "./blocks/buttons";
 
 // Sections 
 @import "./sections/header";
