--- a/css/main.css
+++ b/css/main.css
@@ -14,13 +14,11 @@
 
 /* Links */
 a, a:visited {
-  color: inherit;
   text-decoration: none;
   display: inline-block;
 }
 
 a:hover {
-  color: inherit;
   text-decoration: none;
 }
 
@@ -87,25 +85,12 @@ legend {
 }
 
 html {
-  min-height: 100vh;
-  /* sticky footer */
   scroll-behavior: smooth;
 }
 
 body {
-  min-height: 100vh;
-  /* sticky footer */
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  /* sticky footer */
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  /* sticky footer */
-  font-family: 'Open Sans', sans-serif;
-  color: #323232;
+  font-family: 'Roboto', sans-serif;
+  color: #000;
   font-size: 16px;
   line-height: 1.6875;
   text-rendering: optimizeSpeed;
@@ -113,12 +98,6 @@ body {
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
-}
-
-body > * {
-  -ms-flex-negative: 0;
-      flex-shrink: 0;
-  /* sticky footer */
 }
 
 /* Grid styles */
@@ -156,19 +135,125 @@ body > * {
 }
 
 /* Utility */
+.clip-path {
+  overflow: hidden;
+  -webkit-clip-path: polygon(10% 0, 100% 0, 100% 83%, 90% 100%, 0 100%, 0 17%);
+          clip-path: polygon(10% 0, 100% 0, 100% 83%, 90% 100%, 0 100%, 0 17%);
+}
+
 .none {
   display: none !important;
 }
 
-.visually-hidden {
-  opacity: 0;
-  visibility: hidden;
-  width: 0px;
-  height: 0px;
-  display: block;
-  margin-left: -10000px;
-  background: transparent;
-  font-size: 0;
+.icon-row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-column-gap: 40px;
+          column-gap: 40px;
+}
+.icon-row img {
+  opacity: 1;
+  -webkit-transition: opacity 0.2s ease-in;
+  transition: opacity 0.2s ease-in;
+}
+.icon-row img:hover {
+  opacity: 0.6;
+}
+
+.slider {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  margin-bottom: 1000px;
+}
+.slider img {
+  height: 100%;
+  width: 100%;
+}
+
+.h2 {
+  font-family: Archangelsk;
+  font-size: 62px;
+  line-height: 1.01;
+  font-weight: 400;
+  color: #000;
+}
+
+.banner .h2 {
+  margin-bottom: 25px;
+}
+
+.button {
+  padding: 15px 50px;
+  background-color: #000;
+  font-size: 18px;
+  line-height: 1.16;
+  font-weight: 700;
+  color: #F8F200;
+  -webkit-transition: -webkit-transform 0.2s ease-in,  -webkit-box-shadow 0.3s ease-in;
+  transition: -webkit-transform 0.2s ease-in,  -webkit-box-shadow 0.3s ease-in;
+  transition: transform 0.2s ease-in,  box-shadow 0.3s ease-in;
+  transition: transform 0.2s ease-in,  box-shadow 0.3s ease-in,  -webkit-transform 0.2s ease-in,  -webkit-box-shadow 0.3s ease-in;
+}
+.button:hover {
+  -webkit-transform: scale(1.02);
+          transform: scale(1.02);
+  -webkit-box-shadow: 0px 0px 10px 5px #52BEDC;
+          box-shadow: 0px 0px 10px 5px #52BEDC;
+}
+
+.button--big {
+  padding: 19px 50px;
+  font-size: 24px;
+  line-height: 1.66;
+}
+
+.header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100vh;
+}
+
+.header-top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding-top: 20px;
+  position: relative;
+  z-index: 4;
+}
+
+.header-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  height: 100%;
+}
+
+.banner {
+  padding: 70px;
+  width: 624px;
+  background-color: #F8F200;
 }
 
 /*# sourceMappingURL=main.css.map */
