--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,8 +9,11 @@
 @import "./blocks/slider";
 @import "./blocks/title";
 @import "./blocks/buttons";
+@import "./blocks/form";
 
 // Sections 
 @import "./sections/header";
 @import "./sections/main";
+@import "./sections/about";
+@import "./sections/promo";
 @import "./sections/footer";
