--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,7 @@ img, svg {
   display: block;
   max-width: 100%;
   height: auto;
+  vertical-align: middle;
 }
 
 /* Form */
@@ -91,7 +92,7 @@ html {
 body {
   font-family: 'Roboto', sans-serif;
   color: #000;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.6875;
   text-rendering: optimizeSpeed;
   -webkit-font-smoothing: antialiased;
@@ -102,7 +103,7 @@ body {
 
 /* Grid styles */
 .container {
-  max-width: 1140px;
+  max-width: 1310px;
   width: 100%;
   margin-left: auto;
   margin-right: auto;
@@ -139,6 +140,11 @@ body {
   overflow: hidden;
   -webkit-clip-path: polygon(10% 0, 100% 0, 100% 83%, 90% 100%, 0 100%, 0 17%);
           clip-path: polygon(10% 0, 100% 0, 100% 83%, 90% 100%, 0 100%, 0 17%);
+}
+
+.bold {
+  color: #52BEDC;
+  font-weight: 700;
 }
 
 .none {
@@ -186,6 +192,10 @@ body {
   margin-bottom: 25px;
 }
 
+.promo .h2 {
+  color: #fff;
+}
+
 .button {
   padding: 15px 50px;
   background-color: #000;
@@ -209,6 +219,49 @@ body {
   padding: 19px 50px;
   font-size: 24px;
   line-height: 1.66;
+}
+
+.button--accent-color {
+  background-color: #F8F200;
+  color: #000;
+}
+
+.contact-form {
+  width: 460px;
+}
+
+.form-item + .form-item {
+  margin-top: 18px;
+}
+
+.form-input {
+  display: block;
+  padding-top: 18px;
+  padding-bottom: 13px;
+  padding-left: 15px;
+  padding-right: 15px;
+  width: 100%;
+  background-color: transparent;
+  border-bottom: 1px solid #777;
+  color: #fff;
+}
+.form-input::-webkit-input-placeholder {
+  color: #fff;
+}
+.form-input:-ms-input-placeholder {
+  color: #fff;
+}
+.form-input::-ms-input-placeholder {
+  color: #fff;
+}
+.form-input::placeholder {
+  color: #fff;
+}
+.form-input:focus {
+  border: 1px solid #fff;
+  border-radius: 5px;
+  -webkit-box-shadow: 0 0 10px #52BEDC;
+          box-shadow: 0 0 10px #52BEDC;
 }
 
 .header {
@@ -254,6 +307,85 @@ body {
   padding: 70px;
   width: 624px;
   background-color: #F8F200;
+}
+
+.about {
+  padding-top: 70px;
+  padding-bottom: 70px;
+}
+
+.about__title {
+  margin-bottom: 25px;
+}
+
+.about__desc {
+  margin-bottom: 70px;
+  max-width: 952px;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.88;
+  color: #777777;
+}
+.about__desc p + p {
+  margin-top: 15px;
+}
+
+.about__img {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.about__img img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.about__col-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  row-gap: 32px;
+}
+
+.promo {
+  padding-bottom: 70px;
+  background-color: #000;
+}
+
+.promo__top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-column-gap: 32px;
+          column-gap: 32px;
+  margin-bottom: 25px;
+}
+
+.promo__icon {
+  padding-top: 15px;
+}
+
+.promo__title {
+  padding-top: 70px;
+}
+
+.promo__desc {
+  margin-bottom: 25px;
+  max-width: 963px;
+  line-height: 1.88;
+  color: #fff;
 }
 
 /*# sourceMappingURL=main.css.map */
