--- a/sass/blocks/_buttons.scss
+++ b/sass/blocks/_buttons.scss
@@ -9,7 +9,6 @@
                 box-shadow 0.3s ease-in;
 
     &:hover {
-        // opacity: 0.7;
         transform: scale(1.02);
         box-shadow: 0px 0px 10px 5px #52BEDC;
     }
@@ -19,4 +18,9 @@
     padding: 19px 50px;
     font-size: 24px;
     line-height: 1.66;
+}
+
+.button--accent-color {
+    background-color: $accent-color;
+    color: $black-color;
 }
