--- a/css/main.css
+++ b/css/main.css
@@ -62,14 +62,16 @@ button, input[type="submit"] {
   display: inline-block;
   -webkit-box-shadow: none;
           box-shadow: none;
-  background-color: transparent;
-  background: none;
   cursor: pointer;
 }
 
 input:focus, input:active,
 button:focus, button:active {
   outline: none;
+}
+
+input[type="file"] {
+  display: none;
 }
 
 button::-moz-focus-inner {
@@ -197,6 +199,7 @@ body {
 }
 
 .button {
+  display: inline-block;
   padding: 15px 50px;
   background-color: #000;
   font-size: 18px;
@@ -225,9 +228,16 @@ body {
   background-color: #F8F200;
   color: #000;
 }
+.button--accent-color:hover {
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  -webkit-box-shadow: 0px 0px 10px 5px #52BEDC;
+          box-shadow: 0px 0px 10px 5px #52BEDC;
+}
 
 .contact-form {
   width: 460px;
+  color: #fff;
 }
 
 .form-item + .form-item {
@@ -242,7 +252,7 @@ body {
   padding-right: 15px;
   width: 100%;
   background-color: transparent;
-  border-bottom: 1px solid #777;
+  border-bottom: 1px solid #777777;
   color: #fff;
 }
 .form-input::-webkit-input-placeholder {
@@ -262,6 +272,102 @@ body {
   border-radius: 5px;
   -webkit-box-shadow: 0 0 10px #52BEDC;
           box-shadow: 0 0 10px #52BEDC;
+}
+
+.form-file {
+  margin: 35px 0;
+  padding: 39px 0;
+  display: block;
+  width: 100%;
+  border: 1px dashed #777777;
+  text-align: center;
+  -webkit-transition: border 0.3s ease-in;
+  transition: border 0.3s ease-in;
+}
+.form-file span {
+  color: #777777;
+}
+.form-file span:last-child {
+  font-size: 16px;
+}
+.form-file:focus {
+  border: 1px solid #fff;
+  border-radius: 5px;
+  -webkit-box-shadow: 0 0 10px #52BEDC;
+          box-shadow: 0 0 10px #52BEDC;
+}
+.form-file:active {
+  border: 1px solid #fff;
+  border-radius: 5px;
+  -webkit-box-shadow: 0 0 10px #52BEDC;
+          box-shadow: 0 0 10px #52BEDC;
+}
+.form-file:hover {
+  border: 1px solid #fff;
+  border-radius: 5px;
+  -webkit-box-shadow: 0 0 10px #52BEDC;
+          box-shadow: 0 0 10px #52BEDC;
+}
+
+.form-button {
+  margin-bottom: 15px;
+}
+
+.checkbox-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 12px;
+  font-weight: 300;
+  color: #fff;
+}
+.checkbox-wrapper span {
+  padding-top: 4px;
+  vertical-align: bottom;
+}
+.checkbox-wrapper .real-checkbox {
+  width: 0;
+  padding: 0;
+  position: absolute;
+  opacity: 0;
+  z-index: -1;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+}
+.checkbox-wrapper .custom-checkbox {
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  margin-right: 10px;
+  position: relative;
+  display: inline-block;
+  width: 14px;
+  height: 14px;
+  border: 1px solid #777777;
+}
+.checkbox-wrapper .custom-checkbox::before {
+  content: '';
+  display: block;
+  position: absolute;
+  width: 11px;
+  height: 11px;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%) scale(0);
+          transform: translate(-50%, -50%) scale(0);
+  background-image: url(../../img/icon/checkbox.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.checkbox-wrapper .real-checkbox:checked + .custom-checkbox::before {
+  -webkit-transform: translate(-50%, -50%) scale(1);
+          transform: translate(-50%, -50%) scale(1);
 }
 
 .header {
