--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -68,14 +68,16 @@ input::-ms-clear {
 button, input[type="submit"] {
     display: inline-block;
     box-shadow: none;
-    background-color: transparent;
-    background: none;
     cursor: pointer;
 }
 
 input:focus, input:active,
 button:focus, button:active {
     outline: none;
+}
+
+input[type="file"] {
+	display: none;
 }
 
 button::-moz-focus-inner {
