--- a/sass/blocks/_buttons.scss
+++ b/sass/blocks/_buttons.scss
@@ -1,4 +1,5 @@
 .button {
+    display: inline-block;
     padding: 15px 50px;
     background-color: $black-color;
     font-size: 18px;
@@ -23,4 +24,9 @@
 .button--accent-color {
     background-color: $accent-color;
     color: $black-color;
+
+    &:hover {
+        transform: scale(1);
+        box-shadow: 0px 0px 10px 5px #52BEDC;
+    }
 }
