--- a/sass/sections/_about.scss
+++ b/sass/sections/_about.scss
@@ -13,7 +13,7 @@
     font-size: 18px;
     font-weight: 400;
     line-height: 1.88;
-    color: #777777;
+    color: $color-ish;
 
     & p+p {
         margin-top: 15px;
