--- a/sass/blocks/_buttons.scss
+++ b/sass/blocks/_buttons.scss
@@ -13,6 +13,7 @@
         transform: scale(1.02);
         box-shadow: 0px 0px 10px 5px #52BEDC;
     }
+
 }
 
 .button--big {
@@ -25,8 +26,8 @@
     background-color: $accent-color;
     color: $black-color;
 
-    &:hover {
-        transform: scale(1);
-        box-shadow: 0px 0px 10px 5px #52BEDC;
-    }
+    // &:hover {
+    //     transform: scale(1);
+    //     box-shadow: 0px 0px 10px 5px #52BEDC;
+    // }
 }
