--- a/sass/sections/_promo.scss
+++ b/sass/sections/_promo.scss
@@ -1,5 +1,6 @@
 .promo {
     padding-bottom: 70px;
+    position: relative;
     background-color: $black-color;
 }
 
@@ -7,20 +8,84 @@
     display: flex;
     column-gap: 32px;
     margin-bottom: 25px;
+    
+    .promo__icon {
+        padding-top: 15px;
+    }
+
+    .promo__title {
+        padding-top: 70px;
+    }
 }
 
-.promo__icon {
-    padding-top: 15px;
-}
-
-.promo__title {
-    padding-top: 70px;
-}
 
 .promo__desc {
-    margin-bottom: 25px;
+    margin-bottom: 102px;
     max-width: 963px;
     line-height: 1.88;
     color: $light-text-color;
+
+    p+p {
+        margin-top: 10px;
+    }
+}
+
+.promo__wrapper {
+    display: flex;
+    column-gap: 196px;
+    padding-bottom: 70px;
+}
+
+.promo__img {
+    display: flex;
+    column-gap: 32px;
+
+    .img-xbox {
+        position: relative;
+        height: 100%;
+    
+        img {
+            position: relative;
+            z-index: 4;
+        }
+    
+        &::before {
+            content: '';
+            position: absolute;
+            bottom: -25px;
+            right: 0; 
+            z-index: 0;
+            background-image: url(../../img/section-promo/bg-xbox.svg);
+            width: 460px;
+            height: 456px;
+        }
+    }
+    
+    .img-sony {
+        position: relative;
+        height: 100%;
+    
+        img {
+            position: relative;
+            z-index: 4;
+        }
+    
+        &::before {
+            content: '';
+            position: absolute;
+            top: -15px;
+            right: 5px; 
+            z-index: 0;
+            background-image: url(../../img/section-promo/bg-sony.svg);
+            width: 460px;
+            height: 456px;
+        }
+    }
+}
+
+.border-bottom {
+    position: absolute;
+    bottom: 0;
+    left: 0;
 }
 
