--- a/sass/blocks/_form.scss
+++ b/sass/blocks/_form.scss
@@ -110,7 +110,7 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%) scale(1);
-        background-image: url(../../img/icon/checkbox.svg);
+        background-image: url(.././img/icon/checkbox.svg);
         background-position: center;
         background-repeat: no-repeat;
     }
