--- a/sass/sections/_promo.scss
+++ b/sass/sections/_promo.scss
@@ -55,7 +55,7 @@
             bottom: -25px;
             right: 0; 
             z-index: 0;
-            background-image: url(../../img/section-promo/bg-xbox.svg);
+            background-image: url(.././img/section-promo/bg-xbox.svg);
             width: 460px;
             height: 456px;
         }
@@ -76,7 +76,7 @@
             top: -15px;
             right: 5px; 
             z-index: 0;
-            background-image: url(../../img/section-promo/bg-sony.svg);
+            background-image: url(.././img/section-promo/bg-sony.svg);
             width: 460px;
             height: 456px;
         }
