--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,4 +16,5 @@
 @import "./sections/main";
 @import "./sections/about";
 @import "./sections/promo";
+@import "./sections/partner";
 @import "./sections/footer";
