--- a/sass/blocks/_title.scss
+++ b/sass/blocks/_title.scss
@@ -13,3 +13,14 @@
 .promo .h2 {
     color: $light-text-color;
 }
+
+.ofer .h2 {
+    color: $light-text-color;
+}
+
+.subtitle {
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 1.16;
+    color: $bold-color;
+}
