--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,4 +17,5 @@
 @import "./sections/about";
 @import "./sections/promo";
 @import "./sections/partner";
+@import "./sections/ofer";
 @import "./sections/footer";
