--- a/sass/sections/partner.scss
+++ b/sass/sections/partner.scss
@@ -59,7 +59,7 @@
         content: '';
         // display: block;
         position: absolute;
-        top: 0;
+        top: -3px;
         left: 0;
         width: 24px;
         height: 24px;
